--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 		<!-- <script src="billies.bkchange.js"></script> -->
         <script src="billiesBkchangeV2.js"></script>
 		<script>
-		 var imgs = ['img/bak1.jpg', 'img/bak2.jpg', 'img/bak3.jpg'];
-         var options = {images: imgs, speed: 5000, times: 7000};
-         jQuery('#bkimage').bgchanger(options);
+		 var images = ['img/bak1.jpg', 'img/bak2.jpg', 'img/bak3.jpg'];
+         var options = {speed: 5000, times: 7000};
+         jQuery('#bkimage').bgchanger(images, options);
 		</script>
 	</body>
 </html>
